# neural-learn-ai

./: Cargo.toml  Dioxus.toml  README.md  package-lock.json  tailwind.config.js
assets/: main.css  realistic_projects.json  sample_project.json  settings_template.yaml  tailwind.css
src/: date_format.rs  main.rs  project_store.rs
src/components/: chrome_style_navbar.rs  collapsible_image.rs  delete_alert_modal.rs  error_alert_modal.rs  image_upload.rs  knowledge_modal.rs  learn.rs  menu_bar.rs  mod.rs  new_project_card.rs  option_annotations.rs  project_card.rs  project_details.rs  project_form.rs  reco.rs  recognize.rs  setting.rs  successful_alert_modal.rs  tabs.rs  top_bar.rs
src/state/: tabs.rs
src/store/: mod.rs  project.rs  project_schema.rs
src/views/: home_page.rs  image_roi.rs  mod.rs  project_details.rs  project_grid.rs
