[package]
name = "neuron-learn-ai"
version = "0.1.0"
authors = ["nitinn@valueaddsofttech.com <nitinn@valueaddsofttech.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = [] }
base64 = "0.22.1"
image = "0.25.6"
rfd = "0.15.3"
dioxus-desktop = "0.6.3"
dioxus-signals = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.11.1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std", "clock"] }
chrono-tz = { version = "0.5", default-features = false, features = ["std"] }
uuid = { version = "1.17.0", features = ["v4"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
